feat: request cancellation
